--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="https://wa.me/+9196656 07690">
+                  <a href="https://wa.me/+9196656 07690" target="_blank">
                     <i class="fa fa-whatsapp"></i>
                   </a>
                 </li>
