--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div class="card">
 
           <div class="card-image">
-            <img width="320px" src="Manas Gadgil.JPEG" alt="profile one">
+            <img width="320px" src="manas gadgil.jpeg" alt="profile one">
           </div>
 
           <ul class="social-icons">
